--- a/requirements_oldfilednu.txt
+++ b/requirements_oldfilednu.txt
@@ -2,9 +2,10 @@
 #### installation: pip install -r requirements.txt
 ###### Requirements without Version Specifiers ######
 bottle
-json
+#json
 sys
 mongoengine
-twilio.twiml.messaging_response
+#twilio.twiml.messaging_response
+twilio
 datetime
 logging
