--- a/config/dbconfig.json
+++ b/config/dbconfig.json
@@ -14,6 +14,7 @@
       "port":27017
     },
      "PRODAzure":{
+      "use_azure_appvariable":"False",
       "db":"mongodb",
       "dbcodeconnection":"mongoengine",
       "dbname":"mwallet",
